ADD - swagger product store property validations
